kubernetes/infrastructure/controllers/kyverno/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
